--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,10 @@
   height: 250px;
   object-fit: contain;
 }
+
+
+.breadcrumbs {
+  margin-bottom: 20px;
+  font-size: 16px;
+  text-transform: capitalize;
+}
